syntax = "proto3";
import "google/protobuf/timestamp.proto";

package proto_broker_msgs;
option csharp_namespace = "ProtoBrokerMsgs";

message ServerMessage {
    enum Cmd {
        Check = 0;
        Uncheck = 1;
        Switch = 2;
    }

    Cmd command = 1;
    
}

message TelemetryMessage {
    string id_device = 1;

    float temperature = 2;
    float humidity = 3;
    float pressure = 4;

    google.protobuf.Timestamp timestamp = 5;
}

message ActivityMesssage {
    string id_device = 1;
    bool optional_state = 2;
}

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    string sub_message = 9;
  }
}
